@@ -1,3 +1,8 @@
+2013-11-05  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* double-int.c (lshift_double, rshift_double): Remove
+	SHIFT_COUNT_TRUNCATED handling.
+
 2013-11-05  Jeff Law  <law@redhat.com>
 
 	* Makefile.in (OBJS): Add gimple-ssa-isolate-paths.o
